# Murphy

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_browseruse.md  pyproject.toml  run.sh  run_auth_murphy.py  run_task.py
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: claude.yml  docker.yml  lint.yml  publish.yml  test.yaml
browser_use/: README.md  VENDOR.md  __init__.py  cli.py  config.py
browser_use/actor/: element.py
browser_use/agent/: cloud_events.py  gif.py  prompts.py  service.py  views.py
browser_use/agent/message_manager/: service.py
browser_use/browser/: profile.py  session.py  views.py
browser_use/browser/cloud/: cloud.py
browser_use/browser/watchdogs/: aboutblank_watchdog.py  default_action_watchdog.py  dom_watchdog.py  downloads_watchdog.py
browser_use/code_use/: service.py
browser_use/dom/: enhanced_snapshot.py  service.py  views.py
browser_use/dom/playground/: extraction.py  multi_act.py
browser_use/dom/serializer/: clickable_elements.py  eval_serializer.py  serializer.py
browser_use/llm/tests/: test_groq_loop.py
browser_use/mcp/: client.py  controller.py  server.py
browser_use/sandbox/: sandbox.py
browser_use/skill_cli/: python_session.py
browser_use/skill_cli/commands/: doctor.py  setup.py
browser_use/sync/: auth.py  service.py
browser_use/telemetry/: service.py
browser_use/tokens/: service.py
browser_use/tokens/tests/: test_cost.py
browser_use/tools/: service.py
browser_use/tools/registry/: service.py
docker/: Dockerfile  Dockerfile.api
docs/: ARCHITECTURE.md  BROWSER_USE_MODIFICATIONS.md
examples/browser_use/models/langchain/: chat.py  example.py
examples/murphy/: basic_eval.py  run_auth_murphy.py
murphy/: __init__.py  __main__.py  actions.py  analysis.py  api.py  auth.py  cli.py  config.py  evaluate.py  execution.py  features_io.py  fixtures.py  generation.py  judge.py  models.py  prompts.py  quality.py  regen_report.py  report.py  run.sh  server.py  session_utils.py  summary.py  test_plan_io.py
murphy/api/: auth.py  cli.py  jobs.py  request_models.py  rest.py  server.py  templates.py
murphy/browser/: actions.py  patches.py  session_utils.py
murphy/core/: analysis.py  execution.py  generation.py  judge.py  pipeline.py  quality.py  summary.py
murphy/fixture_data/: dummy.csv  dummy.docx  dummy.txt
murphy/io/: fixtures.py  regen_report.py  report.py  report_helpers.py  report_json.py  report_markdown.py
murphy/output/: test_plan.yaml  work_toqan_ai_features.md
tests/agent_tasks/: README.md
tests/browser_use/: conftest.py  test_action_loop_detection.py  test_ai_step.py  test_ax_name_matching.py  test_budget_warning.py  test_fallback_llm.py  test_icon_detection.py  test_multi_act_guards.py  test_rerun_ai_summary.py  test_screenshot_exclusion.py  test_toast_detection.py
tests/browser_use/browser/: test_dom_serializer.py  test_navigation.py  test_output_paths.py  test_screenshot.py  test_tabs.py
tests/browser_use/infrastructure/: test_registry_action_parameter_injection.py  test_registry_core.py  test_registry_validation.py  test_url_shortening.py
tests/browser_use/interactions/: test_dropdown_aria_menus.py  test_radio_buttons.py
tests/browser_use/models/: test_llm_anthropic.py  test_llm_azure.py  test_llm_browseruse.py  test_llm_google.py  test_llm_openai.py
tests/ci/: conftest.py  test_action_loop_detection.py  test_icon_detection.py  test_multi_act_guards.py  test_toast_detection.py
tests/ci/interactions/: test_disabled_buttons.py  test_radio_buttons.py
tests/murphy/: test_features_io.py  test_fixtures.py  test_judge.py  test_models.py  test_prompts.py  test_quality.py  test_report.py  test_summary.py  test_test_plan_io.py
tests/murphy/api/: test_auth.py  test_jobs.py  test_request_models.py  test_rest_api.py  test_templates.py
tests/murphy/browser/: test_actions.py  test_patches.py  test_patches_apply.py
tests/murphy/core/: test_execution.py  test_execution_parse.py  test_generation.py  test_judge.py  test_judge_evidence.py  test_judge_murphy.py  test_quality.py  test_summary.py  test_summary_extended.py
tests/murphy/io/: test_features_io.py  test_fixtures.py  test_report.py  test_report_full.py  test_test_plan_io.py
tests/scripts/: debug_iframe_scrolling.py
